<resources>
    <string name="app_name">KingPins</string>
    <string name="strE_mail">E-mail</string>
    <string name="strPassword">Password</string>
    <string name="strLogin">Login</string>
    <string name="strRegister">Register</string>
    <string name="products">PRODUCTS</string>
    <string name="services">TODO</string>
    <string name="product">TODO</string>
    <string name="service">SERVICES</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>

    <string name="browse_products_and_services_posted_lately">BROWSE PRODUCTS AND SERVICES POSTED LATELY!</string>
    <string name="our_latest_products_and_services">Our latest products and services</string>
    <string name="check_out_the_most_popular_products_and_services_around_you">CHECK OUT THE MOST POPULAR PRODUCTS AND SERVICES AROUND YOU!</string>
    <string name="most_popular_products_and_services">Most popular products and services</string>
    <string name="what_you_purchased_last_time">WHAT YOU PURCHASED LAST TIME.</string>
    <string name="history_of_the_customer_s_past_purchases">History of the customer\'s past purchases</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop_by_category">Shop by category</string>
    <string name="thank_you_for_purchasing_from_stumarket_your_transaction_was_successful">Thank you for purchasing from StuMarket. Your transaction was successful!</string>
    <string name="items">Items:</string>
    <string name="name_and_price_of_items">Name and price of items</string>
    <string name="total_price_zar">Total Price(ZAR):</string>
    <string name="total">TOTAL</string>
    <string name="back_to_home">BACK TO HOME</string>
    <string-array name="categories">
        <item>Category</item>
        <item>BOOKS</item>
        <item>STATIONARY</item>
        <item>OFFICE CONSUMABLES</item>
        <item>GADGETS</item>
        <item>FURNITURE</item>
        <item>PERIPHERALS</item>
        <item>BOOK A TUTOR</item>
        <item>LAPTOP REPAIR</item>
        <item>MENTORSHIP</item>
    </string-array>
</resources>