<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSilverWhite"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/logo"
        android:orientation="vertical"
        android:padding="5dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:gravity="center_horizontal"
        android:text="@string/thank_you_for_purchasing_from_stumarket_your_transaction_was_successful"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/Items"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_horizontal"
        android:text="@string/items"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:text="@string/name_and_price_of_items"
        android:textColor="@color/colorBlack"
        android:textSize="19sp"
        android:textStyle="italic" />
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_price_zar"
        android:textColor="@color/colorBlack"
        android:textAlignment="center"
        android:textSize="19sp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:gravity="center"
        android:text="@string/total"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="center"
        android:text="@string/back_to_home" />

</LinearLayout>