<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="@color/colorSilverWhite"
    tools:context=".Homepage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <include
            layout="@layout/main_toolbar"/>
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/colorSilverWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorSilverWhite"

            android:orientation="vertical"
            android:gravity="center|end">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="horizontal"
                android:gravity="center|end">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editSearchbar"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="8"
                    android:textColor="@color/black"
                    android:layout_margin="5dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:background="@drawable/my_edit_text"
                    android:ems="10"
                    android:hint="@string/search"
                    android:drawableStart="@drawable/search"
                    android:gravity="center"
                    android:drawableLeft="@drawable/search">
                </com.google.android.material.textfield.TextInputEditText>

                <ImageView
                    android:id="@+id/goToCart"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="2"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_cart"
                    android:ems="10"
                    android:onClick="clickDashboard"
                    android:background="@drawable/my_edit_text"
                    android:gravity="center"
                    android:contentDescription="@string/todo">
                </ImageView>

            </LinearLayout>

        </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="151dp"
                android:background="@drawable/welcome"
                android:orientation="vertical"
                android:padding="5dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/browse_products_and_services_posted_lately"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:gravity="center_horizontal"
                android:padding="10sp">
            </TextView>

            <HorizontalScrollView
                android:id="@+id/Browse"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/my_edit_text">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue"
                    android:drawableEnd="@drawable/books2"
                    android:gravity="center"
                    android:hint="@string/our_latest_products_and_services"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textColorHint="@android:color/white"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:drawableRight="@drawable/books2" />
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/check_out_the_most_popular_products_and_services_around_you"
                android:textStyle="italic"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:padding="10sp">
            </TextView>

            <HorizontalScrollView
                android:id="@+id/MostPopular"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/my_edit_text">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue"
                    android:drawableEnd="@drawable/type"
                    android:gravity="center"
                    android:hint="@string/most_popular_products_and_services"
                    android:textColorHint="@android:color/white"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:drawableRight="@drawable/type" />
            </HorizontalScrollView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/what_you_purchased_last_time"
                android:textStyle="italic"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:padding="10sp">
            </TextView>

            <HorizontalScrollView
                android:id="@+id/history"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/my_edit_text">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue"
                    android:drawableEnd="@drawable/glass"
                    android:gravity="center"
                    android:hint="@string/history_of_the_customer_s_past_purchases"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:drawableRight="@drawable/glass" />
            </HorizontalScrollView>

        </LinearLayout>

    </ScrollView>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorWhite">

        <include
            layout="@layout/main_nav_drawer"/>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>